<resources>
    <string name="app_name">慧为安服通移动应用系统</string>
    <string name="home_page_company_name">福建为民安全生产咨询服务中心</string>
    <string name="home_page_current_user_prefix">当前用户：</string>
    <string name="home_page_message_unread_count">个信息未阅读</string>
    <string name="home_page_class_un_study">个课程未学习</string>
    <string name="home_page_policy_button">政策法规</string>
    <string name="home_page_class_button">培训课程</string>
    <string name="home_page_company_search_button">企业查询</string>
    <string name="home_page_work_record_button">工作记录</string>
    <string name="home_page_notification_button">通告信息</string>
    <string name="home_page_safe_check_button">检查</string>
    <string name="home_page_safe_review_button">复查</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="dialog_default_title">提示</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="LOADING">请稍后。。。</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="take_photo_success">拍照成功</string>
    <string name="yhdj_commit_hint">提交中...</string>
    <string name="yhdj_zip_bitmap">图片处理中...</string>
    <string name="ewm_failed">识别失败</string>
    <string name="getyhdetail_failed">获取隐患详情失败!</string>
    <string name="ewm_scanning">识别中...</string>
    <string name="take_photo_max_toast">最多只能拍3张照片</string>
    <string name="logout">退出登录</string>

    <string-array name="yhjb">
        <item>一般</item>
        <item>较大</item>
        <item>重大</item>
        <item>特大</item>
    </string-array>

    <string-array name="sbzt">
        <item>正常</item>
        <item>待修</item>
        <item>遗失</item>
        <item>损毁</item>
    </string-array>
    <string-array name="sfxx">
        <item>所有</item>
        <item>已学习过</item>
        <item>未学习过</item>
        <item>未达规定学时</item>
    </string-array>
    <string-array name="sfkh">
        <item>所有</item>
        <item>已考核过</item>
        <item>未考核过</item>
        <item>未达60分及格线</item>
    </string-array>
</resources>
