<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:lines="1"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/app_name"
        android:textSize="22sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_center_company_name"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:text="@string/home_page_company_name" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#333333" />

    <TextView
        android:id="@+id/fragment_home_page_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="16dp"
        android:text="2017年11月11日" />

    <TextView
        android:id="@+id/fragment_home_page_current_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="8dp"
        android:text="@string/home_page_current_user_prefix" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp">

        <TextView
            android:id="@+id/home_page_message_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|end"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"
            android:text="@string/home_page_message_unread_count" />

        <TextView
            android:id="@+id/home_page_class_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:text="@string/home_page_class_un_study" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/home_page_goto_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/rectangle_button_border_selector"
                android:gravity="center"
                android:paddingBottom="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingTop="16dp"
                android:text="@string/home_page_notification_button" />

            <TextView
                android:id="@+id/home_page_goto_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_button_border_selector"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:paddingBottom="16dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="16dp"
                android:text="@string/home_page_safe_check_button" />

            <TextView
                android:id="@+id/home_page_goto_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/rectangle_button_border_selector"
                android:paddingBottom="16dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="16dp"
                android:text="@string/home_page_safe_review_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/home_page_goto_company_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/rectangle_button_border_selector"
                android:gravity="center"
                android:paddingBottom="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingTop="16dp"
                android:text="@string/home_page_company_search_button" />

            <TextView
                android:id="@+id/home_page_goto_work_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/rectangle_button_border_selector"
                android:paddingBottom="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingTop="16dp"
                android:text="@string/home_page_work_record_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/home_page_goto_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/rectangle_button_border_selector"
                android:gravity="center"
                android:paddingBottom="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingTop="16dp"
                android:text="@string/home_page_policy_button" />

            <TextView
                android:id="@+id/home_page_goto_class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/rectangle_button_border_selector"
                android:paddingBottom="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingTop="16dp"
                android:text="@string/home_page_class_button" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>